Add SelectPlaylist RPC
